hello-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: hello-app-deploy
spec:
 replicas: 3
 selector:
   matchLabels:
     app: hello-app
 template:
   metadata:
     labels:
       app: hello-app
   spec:
     containers:
     - name: hello-app
       image: gcr.io/google-samples/hello-app:1.0
