hello-app-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: hello-app-svc
 annotations:
   konghq.com/plugins: five-per-min
spec:
 selector:
   app: hello-app
 ports:
 - port: 80
   targetPort: 8080
